# Sandbox

./: pyproject.toml  pytest.ini
.github/workflows/: mac-tests.yml  test.yml  tests.yml  windows-tests.yml  workflow-dispatch-input.yml
A/: foo.py  test_foo.py
B/: bar.py  test_bar.py
B/tests/: test_bar2.py
foo/: tempfile_pool.py
tests/: test_foo.py  test_matplotlib.py  test_mxnet.py  test_tqdm.py
